--- a/pages/students.html
+++ b/pages/students.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/students.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/pop-up.css">
+  <link rel="stylesheet" href="../css/login-popup.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -27,8 +27,8 @@
     <button class="login-button">Войти</button>
   </header>
   <main class="students">
-    <div class="stud-title">
-      <h1 class="course-title">Студенты потока 08.02.2020</h1> &#160;
+    <div class="course-title">
+      <h1>Студенты потока 08.02.2020 &#160;</h1>
       <img class="icon-img" src="../images/hand-right-4.png">
       <img class="icon-img" src="../images/tg.png">
     </div>
