Сделал кликабельным студента, а закрыть окно обратно не могу

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -29,7 +29,7 @@
   <main>
     <div class="address-title">
       <h1 class="title">Как нас найти</h1> &#160;
-      <img class="icon-img" src="../images/hand-right-4.png">
+      <img class="icon-img" src="../images/map-icon.png">
     </div>
     <img class="map-img" src="../images/google-map.png" title="Как нас найти">
     <div class="address">
@@ -50,6 +50,6 @@
       <button class="popup-button">Войти</button>
     </form>
   </div>
-  <script src="../js/pop-up.js"></script>
+  <script src="../js/login-popup.js"></script>
 </body>
 </html>
