--- a/pages/about.html
+++ b/pages/about.html
@@ -46,6 +46,6 @@
       <button class="popup-button">Войти</button>
     </form>
   </div>
-  <script src="../js/pop-up.js"></script>
+  <script src="../js/login-popup.js"></script>
 </body>
 </html>
