--- a/pages/students.html
+++ b/pages/students.html
@@ -40,8 +40,10 @@
       </div>
       <div class="student-2">
         <div class="new-student-logo">Новичок</div>
-        <img class="photo-2" src="../images/Rectangle.png" title="Саша">
-        <p class="caption-2">Саша</p>
+        <a href="../pages/about-me.html">
+          <img class="photo-2" src="../images/Rectangle.png" title="Камиль">
+        </a>
+        <p class="caption-2">Камиль</p>
       </div>
       <div class="student-3">
         <img class="photo-3" src="../images/Rectangle.png" title="Глаша">
@@ -71,7 +73,7 @@
   </div>
   <div class="student-background">
     <div class="student-popup">
-      <div class="popup-close">x</div>
+      <div class="form-close">x</div>
       <div class="student-card">
         <img class="student-photo" src="../images/studentessa.png">
         <div class="student-description">
