--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -26,7 +26,7 @@
     </nav>
     <button class="login-button">Войти</button>
   </header>
-  <main>
+  <main class="contacts">
     <div class="address-title">
       <h1 class="title">Как нас найти</h1> &#160;
       <img class="icon-img" src="../images/map-icon.png">
