--- a/pages/students.html
+++ b/pages/students.html
@@ -65,7 +65,7 @@
   <div class="form-background">
     <form class="login-popup">
       <h2 class="login-title">Войти на сайт</h2>
-      <div class="popup-close">x</div>
+      <div class="form-close">x</div>
       <input class="login-field" placeholder="Логин" type="text" required>
       <input class="login-field" placeholder="Пароль" type="text" required>
       <button class="popup-button">Войти</button>
@@ -73,16 +73,16 @@
   </div>
   <div class="student-background">
     <div class="student-popup">
-      <div class="form-close">x</div>
+      <div class="popup-close">x</div>
       <div class="student-card">
         <img class="student-photo" src="../images/studentessa.png">
         <div class="student-description">
           <h4 class="question">Имя: <span class="answer">Маша</span></h4>
           <h4 class="question">Фамилия: <span class="answer">Сидорова</span></h4>
-          <h4 class="question">Навыки: <span class="answer">Работа с компьютером, Word, Excel</span></h4>
+          <h4 class="question">Навыки: <span class="answer">Работа с компьютером, интернет, Word и Excel</span></h4>
           <h4 class="about-student">О себе:</h4>
           <p class="about-student">
-            Меня зовут Маша. Я умею варить супы, увлекаюсь оригами и лепкой из суралина. Люблю петь, смотреть фильмы и работать по дому.
+            Меня зовут Маша. Я умею варить супы, увлекаюсь лепкой, слушаю музыку. Люблю 8 марта, свой День рождения и тёплые месяцы года.
           </p><p class="about-student">
             На этот курс я решила поступить, чтобы уметь ещё и верстать сайты.
           </p>
