Добавлена интерактивная карта

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,7 +31,9 @@
       <h1 class="title">Как нас найти</h1> &#160;
       <img class="icon-img" src="../images/map-icon.png">
     </div>
-    <img class="map-img" src="../images/google-map.png" title="Как нас найти">
+    <div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d63916.20131941897!2d30.29771125004181!3d59.95899846326743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1677426714869!5m2!1sru!2sru" width="1120" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <div class="address">
       <h2 class="address-text-title">Наши контакты</h2>
       <p class="address-text">Адрес: г. Санкт-Петербург, Дворцовая пл., 2, 190000</p>
