map and video added

--- a/pages/about.html
+++ b/pages/about.html
@@ -31,8 +31,10 @@
       <h1 class="about-title">О курсе</h1> &#160;
       <img class="icon-img" src="../images/book.png">
     </div>
-    <p class="look-our-video">Посмотрите видео о нас</p>
-    <img class="about-us-video" src="../images/about-us-video.png" title="Видео о нас">
+    <div>
+      <p class="look-our-video">Посмотрите видео о нас</p>
+      <iframe class="about-us-video" src="https://www.youtube.com/embed/0v7pdd4za6s" title="Видео о нас"></iframe>
+    </div>
   </main>
   <footer class="footer">
     <p>2022 &copy;&nbsp;<u>учебный центр</u></p>
